First fully fledge system

--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,10 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <title>Hello World</title>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="dist/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="dist/css/main.css">
+        <title>SAMHSA</title>
     </head>
     <body>
         <div id="master">
@@ -25,7 +26,6 @@
         <script type="text/javascript" src="dist/js/jquery.js"></script>
         <script type="text/javascript" src="dist/js/firebase.js"></script>
         <script type="text/javascript" src="dist/js/react.js"></script>
-        <script type="text/javascript" src="dist/js/components.js"></script>
         <script type="text/javascript" src="dist/js/index.js"></script>
     </body>
 </html>
