--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
         <script type="text/javascript" src="dist/js/jquery.js"></script>
         <script type="text/javascript" src="dist/js/firebase.js"></script>
         <script type="text/javascript" src="dist/js/react.js"></script>
-        <script type="application/javascript" src="dist/js/iscroll.js"></script>
+        <script type='application/javascript' src='dist/js/fastclick.js'></script>
         <script type="text/javascript" src="dist/js/index.js"></script>
     </body>
 </html>
