--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' ws://* wss://* https://*.firebaseio.com https://*.dropboxusercontent.com data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.googleapis.com ws://* wss://* https://*.firebaseio.com https://*.dropboxusercontent.com data: gap: https://*.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -27,6 +27,8 @@
         <script type="text/javascript" src="dist/js/firebase.js"></script>
         <script type="text/javascript" src="dist/js/react.js"></script>
         <script type='application/javascript' src='dist/js/fastclick.js'></script>
-        <script type="text/javascript" src="dist/js/index.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcUAC1zMISi1kSyTh5k-3apk1kTPDddqc&callback=initMap"
+    async defer></script>
+        <script type="text/javascript" src="dist/js/bundle.js"></script>
     </body>
 </html>
