--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="dist/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="dist/css/main.css">
+        <link rel="apple-touch-icon" sizes="114x114" href="dist/images/apple-icon-114x114.png" />
         <title>SAMHSA</title>
     </head>
     <body>
