--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="dist/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="dist/css/main.css">
         <link rel="apple-touch-icon" sizes="114x114" href="dist/images/apple-icon-114x114.png" />
-        <title>SAMHSA</title>
+        <title>OnTrack</title>
     </head>
     <body>
         <div id="master">
